prefinal. Исправлены добавления, сделана проверка на добавлении. Исправлен вывод в DataGrid, исправлен вывод FullName, установлено минимальное значение окон

--- a/Kindergarten_app/Pages/PrivateLessonsPage.xaml
+++ b/Kindergarten_app/Pages/PrivateLessonsPage.xaml
@@ -18,7 +18,7 @@
                 <DataGrid Name="DgPrivateLessons" Margin="10" AutoGenerateColumns="False" CanUserAddRows="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Работник" Binding="{Binding Workers.FullName}"/>
-                        <DataGridTextColumn Header="Дата" Binding="{Binding DateOfCreate}"/>
+                        <DataGridTextColumn Header="Дата" Binding="{Binding Date, StringFormat=d}"/>
                         <DataGridTextColumn Header="ФИО ребенка" Binding="{Binding Kid.FullName}"/>
                         <DataGridTextColumn Header="Сумма" Binding="{Binding Price}"/>
                         <DataGridTemplateColumn>
