--- a/Kindergarten_app/Windows/AddPrivateLessonWindow.xaml
+++ b/Kindergarten_app/Windows/AddPrivateLessonWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kindergarten_app.Windows"
         mc:Ignorable="d"
-        Title="AddPrivateLessonWindow" Height="400" Width="800">
+        Title="AddPrivateLessonWindow" Height="400" Width="800" MinHeight="400" MinWidth="800">
     <Grid Margin="10">
         <DockPanel VerticalAlignment="Center">
             <DockPanel DockPanel.Dock="Top" Margin="10 5">
                 <TextBlock Text="Дата занятия: " FontSize="16" FontWeight="Bold"/>
-                <DatePicker Name="Date" FontSize="16"/>
+                <DatePicker Name="DatePicker" FontSize="16"/>
             </DockPanel>
             <DockPanel DockPanel.Dock="Top" Margin="10 5">
                 <TextBlock Text="Тип занятия: " FontSize="16" FontWeight="Bold"/>
